--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
+    "d3": "^4.10.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
@@ -37,7 +38,8 @@
     "react-dom": "^15.4.2",
     "redis": "^2.7.1",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3"
+    "socket.io-client": "^2.0.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
