--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "grunt-mocha-test": "^0.13.2",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
     "is-utf8": "^0.2.1",
+    "jquery": "^3.2.1",
+    "jqueryui": "^1.11.1",
     "knex": "^0.12.9",
     "mocha": "^3.2.0",
     "morgan": "^1.8.1",
