--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.5",
     "redis": "^2.7.1",
     "redux": "^3.7.2",
     "socket.io": "^2.0.3",
